--- a/src/assets/iconfont.css
+++ b/src/assets/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3977569 */
-  src: url('iconfont.woff2?t=1679826761812') format('woff2'),
-       url('iconfont.woff?t=1679826761812') format('woff'),
-       url('iconfont.ttf?t=1679826761812') format('truetype');
+  src: url('iconfont.woff2?t=1679843172045') format('woff2'),
+       url('iconfont.woff?t=1679843172045') format('woff'),
+       url('iconfont.ttf?t=1679843172045') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-huanyipi:before {
+  content: "\e600";
 }
 
 .icon-caidan:before {
