--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -325,7 +325,8 @@
 	height: 100%;
 	border-radius: 4px;
 	border: 1px solid #f0f0f0;
-	transform: scale(1, 1) transition: all 1s;
+	transform: scale(1, 1) ;
+	transition: all 1s;
 	-webkit-transition: all 1s;
 }
 
@@ -551,7 +552,7 @@ a.load-more:hover {
 .phone-menu {
 	display: inline-block;
 	float: left;
-	padding: 16px 25px 15px 500px;
+	padding: 16px 650px 15px 25px;
 	position: absolute;
 	right: 0;
 }
@@ -576,7 +577,11 @@ a.load-more:hover {
 		width: 614px;
 	}
 
-	.function {
+	.menu li {
+		display: none;
+	}
+
+	.menu i {
 		display: none;
 	}
 
@@ -597,7 +602,19 @@ a.load-more:hover {
 }
 
 @media screen and (max-width: 800px) {
+	.function {
+		float: left !important;
+	}
+
+	.content {
+		width: 100%;
+	}
+
 	.menu {
 		display: none;
+	}
+
+	.sidebar {
+		display: none !important;
 	}
 }
